[package]
name = "groups"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
actixutils = { git = "https://github.com/Austin-rgb/actixutils" }
actix-web = "4.13.0"
serde_json = "1.0.150"
tracing = "0.1.44"
